--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <meta name="google-signin-client_id" content="494025991737-3qt9bl9t1uqp0m3tc83ol7d23f2b7thh.apps.googleusercontent.com ">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+     <link rel="stylesheet" href="style.css">
 </head>
 <div class="wrapper">
     <div class="title-text">
